@startuml
'https://plantuml.com/class-diagram

abstract class Pizza{
    +{abstract} prepare():void
    +bake():void
    +cut():void
    +box():void
}

class BJCheesePizza extends Pizza{
   +prepare():void
}

class BJPepperPizza extends Pizza{
    +prepare():void
}

class LDCheesePizza extends Pizza{
   +prepare():void
}

class LDPepperPizza extends Pizza{
    +prepare():void
}

abstract class OrderPizza{
    +{abstract} createPizza():Pizza
}


class BJOrderPizza extends OrderPizza{
    +createPizza():Pizza
}

class LDOrderPizza extends OrderPizza{
+createPizza():Pizza
}

BJOrderPizza ..> BJPepperPizza
BJOrderPizza ..> BJCheesePizza
LDOrderPizza ..> LDPepperPizza
LDOrderPizza ..> LDCheesePizza

@enduml